Use explicit locale and charset
Make Java code locale-independent and use explicit UTF-8 encoding:
 - Add Locale.ROOT to String.format() calls to ensure consistent formatting
 - Use StandardCharsets.UTF_8 with String.getBytes()
 - Add Locale.ROOT to System.out.printf() calls
 - Add Locale.ROOT to String.toLowerCase() calls
 - Add Locale.ROOT to String.toUpperCase() calls
 - Use StandardCharsets.UTF_8 when contructing a PrintStream
 - Use StandardCharsets.UTF_8 when contructing a OutputStreamWriter